fixed patient portal to be responsive and image and text no longer overlap each other on smaller screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -234,3 +234,16 @@ footer {
   max-height: 100%;
   object-fit: cover;
 }
+
+.dashboard-heading {
+  margin: 30px;
+  font-size: xx-large;
+}
+
+.head-card {
+  font-size: x-large;
+}
+
+#patientDashboardImageDiv {
+  margin: .6rem;
+}
